# fdm_aa_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  fdm_aa_cpp.cpp  python..py  python.py
Modules/: Modules.sln
Modules/Modules/: Modules.cpp  Modules.vcxproj  Modules.vcxproj.filters
anisotropic_appearance_fabrication/: CMakeLists.txt  endpoints.h  main.cpp
anisotropic_appearance_fabrication/grid/: edge.h  grid.h
anisotropic_appearance_fabrication/tests/: EndpointsTest.cpp  EndpointsTest.h  GridTest.cpp  GridTest.h
src/cglib/: CMakeLists.txt  array.h  cycle.cpp  cycle.h  math_cglib.cpp  math_cglib.h  point_adjacency.cpp  point_adjacency.h  polyline.cpp  polyline.h  scalar.cpp  scalar.h  tree_util.h
src/cglib/grid/: cell.cpp  cell.h  edge.cpp  edge.h  grid.cpp  grid.h
src/cglib/src/: array.h  limits.h  math.cpp  math.h  point_adjacency.cpp  point_adjacency.h  point_data.cpp  point_data.h  scalar.cpp  scalar.h  tree_util.cpp  tree_util.h
src/cglib/src/grid/: cell.cpp  cell.h  edge.cpp  edge.h  grid.cpp  grid.h
src/cglib/tests/: CMakeLists.txt
src/cglib/tests/grid/: cell_test.cpp  grid_test.cpp
src/core/grid/: edge.cpp  edge.h  grid.cpp  grid.h
src/main/: fdm_aa_cpp.cpp
src/tests/: EndpointsTest.cpp  GridTest.cpp
src_code/: cglib_src.py
tests/: CMakeLists.txt  point_adjacency_test.cpp  point_data_test.cpp  test_cycle.cpp  test_math.cpp  test_math_cglib.cpp  test_point_adjacency.cpp  test_polyline.cpp  test_scalar.cpp  test_tree_util.cpp
tests/grid/: cell_test.cpp  edge_test.cpp  test_cell.cpp  test_edge.cpp  test_grid.cpp
tools/: Demonstration.cpp  Graph_Viewer.py  Performance_tester.cpp  cycle_creator.cpp  test.cpp
